updated holding page

--- a/fuzzy/templates/holding_page.html
+++ b/fuzzy/templates/holding_page.html
@@ -12,7 +12,7 @@
 body {
   color: #333;
   text-shadow: 0 1px 1px #fff;
-  background: url('../shop/static/images/cardboard_flat.png') repeat top left;   
+  background: url('/static/images/cardboard_flat.png') repeat top left;   
 }
 
 .hr {
@@ -224,7 +224,7 @@ p.intro {
 
 /* FOOTER STYLES */
 #footer {
-  background: url('../shop/static/images/footer_back.png') repeat top left; 
+  background: url('/static/images/footer_back.png') repeat top left; 
   float: left;
   height: 200px;
   padding: 30px 0 100px 0;
@@ -277,7 +277,7 @@ p.intro {
         <div class="hr"></div>
         
         <div class="pure-g" id="products">
-            <img src="../shop/static/images/autumn-medley.jpg" />
+            <img src="/static/images/autumn-medley.jpg" />
         </div>
         <!-- END PRODUCTS -->
         
