--- a/fuzzy/shop/templates/basket.html
+++ b/fuzzy/shop/templates/basket.html
@@ -33,6 +33,14 @@ $(document).ready( function() {
   padding: 10px 0;   
 }
 
+.basket-row div:last-child {
+  text-align: right;   
+}
+
+.basket-row.totals {
+  font-weight: bold;   
+}
+
 .discount form {
    display: none; 
 }
@@ -47,6 +55,10 @@ $(document).ready( function() {
 #checkout-button {
   float: right;
   margin: 20px 0 0 0;   
+}
+
+.discount input[type="submit"] {
+  margin: 0 5px 0 0;   
 }
 
 </style>
@@ -108,7 +120,7 @@ $(document).ready( function() {
 	  </div>
 	{% endfor %}
 	
-    	
+    {% if shopsettings.postage_price %}
 	<div class="basket-row postage pure-u-1">
 		<div class="pure-u-1-8">&nbsp;</div>
 		
@@ -116,7 +128,7 @@ $(document).ready( function() {
 	  	<div class="pure-u-1-2">
 	  		<span class="strikethrough name">Postage</span>
         </div>  
-        <div class="pure-u-1-8 strikethrough">{{ currency.symbol }}{{ currency.postage_cost|floatformat:"2" }}</div>
+        <div class="pure-u-1-8 strikethrough">{{ currency.symbol }}{{ shopsettings.postage_price|floatformat:"2" }}</div>
 		{% else %}
 		<div class="pure-u-1-2">
 			<span class="name">Postage</span><br/>
@@ -124,33 +136,36 @@ $(document).ready( function() {
 		</div>
 		<div class="pure-u-1-8">&nbsp;</div>
 		<div class="pure-u-1-12">&nbsp;</div>
-		<div class="pure-u-1-8">{{ currency.symbol }}{{ currency.postage_cost|floatformat:"2" }}</div>
+		<div class="pure-u-1-8">{{ currency.symbol }}{{ shopsettings.postage_price|floatformat:"2" }}</div>
 		{% endif %}
 	</div>
+	{% endif %}
 	
 
-	<div class="basket-row discount">
-		{% if not discount_code %}
+	<div class="basket-row discount pure-u-1">
+		{% if not discount %}
 		<div class="pure-u-1-8">&nbsp;</div>
-		<div class="pure-u-4-5">
+		<div class="pure-u-2-3">
 		  <a href="" id="toggle">Got a discount code?</a>
 		  <form action="." method="post">
+		      {% csrf_token %}
             <input type="text" name="discount_code" id="id_discount_code" class="clearMeFocus pure-u-1-3" title="Enter discount code here"/>
             <input type="submit" class="button green" value="Apply discount" id="submit"/>
-            <a href="" id="cancel" class="button small">Cancel</a>
+            <a href="" id="cancel" class="button small red">Cancel</a>
 		</form>
 		</div>
+		<div class="pure-u-1-8">&nbsp;</div>
 		
 		
 		{% else %}
 		<div class="pure-u-1-8">&nbsp;</div>
 		<div class="pure-u-1-2">
-		  You have entered a discount code worth {{ percent|floatformat }}% off!
+		  You have entered a discount code worth {{ percent|floatformat }}% off! <a class="small" href="?clear_discount=true">Clear</a>
 		</div>
 		<div class="pure-u-1-8">&nbsp;</div>
 		<div class="pure-u-1-12">&nbsp;</div>
 		<div class="pure-u-1-8">
-		  <span class="red">-{{ currency.symbol }}{{ value|floatformat:"-2" }}</span>
+		  <span class="red">-{{ currency.symbol }}{{ discount_amount|floatformat:"-2" }}</span>
 		</div>
 		{% if discount_message %}
 		  <span id="message" class="red">{{ discount_message }} - </span>
