--- a/fuzzy/shop/templates/product.html
+++ b/fuzzy/shop/templates/product.html
@@ -184,12 +184,19 @@ $(document).ready( function() {
 
 <div class="hr"></div>
 
-<div id="body" class="pure-u-2-3">
+<div id="body" class="pure-u-3-5">
 {{ product.content|convert_links|safe }}
 </div>
 
+
+
 <div id="right" class="pure-u-1-3">
-<h3>Safe payments</h3>
+    <div class="pure-u-1 white">
+        <div class="inner">
+            <h3>Safe payments</h3>
+            <p>Cras id lorem a tortor laoreet tristique non sit amet ipsum. Curabitur ac velit non nisi dignissim interdum. Donec non mauris ac erat euismod porta in sit amet nulla.</p>
+        </div>
+    </div>
 </div>
 
 </div>
