--- a/fuzzy/shop/templates/forms/order_step_one.html
+++ b/fuzzy/shop/templates/forms/order_step_one.html
@@ -133,7 +133,7 @@
 	{% endif %}
 
 	<div id="checkout-button">
-		<input type="submit" value="{% trans 'Save your details' %} &raquo;" next="" class="button green"/>
+		<input type="submit" value="{% trans 'Next step - confirm and pay' %} &raquo;" next="" class="button large"/>
 	</div>
 		
 	</form>
