--- a/fuzzy/shop/templates/basket.html
+++ b/fuzzy/shop/templates/basket.html
@@ -131,8 +131,8 @@ $(document).ready( function() {
         <div class="pure-u-1-8 strikethrough">{{ currency.symbol }}{{ shopsettings.postage_price|floatformat:"2" }}</div>
 		{% else %}
 		<div class="pure-u-1-2">
-			<span class="name">Postage</span><br/>
-			<span class="">Delivered in 1-3 days | Shipped from the UK</span>
+			<span class="name">Postage</span>
+			<span class="small">Delivered in 1-3 days | Shipped from the UK</span>
 		</div>
 		<div class="pure-u-1-8">&nbsp;</div>
 		<div class="pure-u-1-12">&nbsp;</div>
