--- a/fuzzy/shop/templates/forms/order_confirm.html
+++ b/fuzzy/shop/templates/forms/order_confirm.html
@@ -17,6 +17,18 @@
   margin: 0;   
 }
 
+#items tr td:first-child {
+  width: 350px;   
+}
+
+#items tr td:last-child {
+  text-align: right;   
+}
+
+#payment {
+  margin: 20px 0 0;   
+}
+
 </style>
 
 {% endblock %}
@@ -43,13 +55,13 @@
    
 <div class="pure-g-r">
 				
-	<div id="items" class="pure-u-1-2">
+	<div id="items" class="pure-u-2-3">
 		<table>
 			{% for thing in order.items.all %}
 				  <tr>				
-			    	<td valign="top">
-			    		<strong>{{ thing.price.product.name }}
-			    		x {{ thing.quantity }}</strong>
+			    	<td class="pure-1-2" valign="top">
+			    		<strong>{{ thing.price.product.name }} x {{ thing.quantity }}</strong> 
+			    		<span class="small">{{ thing.price.description }}</span>
 			    	</td>
 			    	<td valign="top">{{ currency.symbol }}{{ thing.get_price|floatformat:"2" }}</td>		    				
 				  </tr>
@@ -58,18 +70,18 @@
 	        
 	    	{% if postage_discount %}
 	    	  <tr>
-	    	    <td colspan="2"><span class="small"><em>{% blocktrans with currency.symbol as symbol and currency.postage_discount_threshold as ptd %}There is no postage charge, because your order is over {{ symbol }}{{ ptd }}{% endblocktrans %}</em></span></td>
+	    	    <td colspan="2"><span class="small"><em>{% blocktrans with currency.symbol as symbol and shopsettings.postage_discount_threshold as ptd %}There is no postage charge, because your order is over {{ symbol }}{{ ptd }}{% endblocktrans %}</em></span></td>
 	    	  </tr>
 	    	  {% else %}
 	    	  <tr>
 	    	  	<td>{% trans 'Postage' %}</td>
-	    	  	<td>{{ currency.symbol }}{{ currency.postage_cost|floatformat:"2" }}</td>		  
+	    	  	<td>{{ currency.symbol }}{{ shopsettings.postage_price|floatformat:"2" }}</td>		  
 	    	  </tr>
 	        {% endif %}
 	        {% if order.discount %}
 	      	  <tr>
 	      	  	<td>{% trans 'Discount' %}</td>
-	      	  	<td>-{{ currency.symbol }}{{ discount|floatformat:"2" }}</td>
+	      	  	<td><span class="red">-{{ currency.symbol }}{{ discount_amount|floatformat:"2" }}</span></td>
 	      	  </tr>
 	      	{% endif %}
 			  <tr>
@@ -79,7 +91,7 @@
 		   </table>
 	</div>
 
-	<div id="address" class="pure-u-1-2">
+	<div id="address" class="pure-u-1-3">
 
         <p class="address">
             {% with order.address as address %}
@@ -92,7 +104,7 @@
 
     
 
-<form action="" method="POST" class="pure-u-1">
+<form action="" method="POST" class="pure-u-1" id="payment">
   {% csrf_token %}
   <script
     src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
