order process refinements

--- a/fuzzy/shop/templates/home.html
+++ b/fuzzy/shop/templates/home.html
@@ -1,7 +1,7 @@
 {% extends base_template %}
 {% load thumbnail staticfiles %}
 
-{% block pagetitle %}{% endblock %}
+{% block pagetitle %}{{ shopsettings.homepage_browser_title }}{% endblock %}
 
 {% block metadescription %}{% endblock %}
 
