added shopsettings changes and south

--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -157,6 +157,7 @@ input[type="text"], input[type="email"], textarea {
   float: left;
   width: 100%;
   border-bottom: 2px dashed #fff;
+  position: relative;
 }
 
 #basket {
@@ -218,7 +219,11 @@ input[type="text"], input[type="email"], textarea {
   list-style-type: none;
   padding: 0;
   margin: 65px 0 0px;
+  position: absolute;
+  bottom: 10px;
+  right: 0;
 }
+
 
 #header ul li {
  float: left;
