--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -154,6 +154,7 @@ input[type="text"], input[type="email"], textarea {
   margin-top: 30px;  
   margin-bottom: 30px; 
   padding-bottom: 20px;
+  min-height: 80px;
   float: left;
   width: 100%;
   border-bottom: 2px dashed #fff;
