--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -34,11 +34,9 @@
     <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 	    
 	{% if ga_is_on %}
-		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-		<script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	{% else %}
-		<script src="{% static 'js/jquery-1.8.2.min.js' %}"></script>
-		<script src="{% static 'js/jquery.tools.min.js' %}"></script>
+		<script src="{% static 'js/jquery-1.9.1.js' %}"></script>
 	{% endif %}
 	   
 	{% block extracss %}{% endblock %}
@@ -47,7 +45,7 @@
 	<style type="text/css">
 	
 	   {% if shopsettings.link_color %}
-	   a:link, a:visited {
+	   a:link, a:visited, span.toggle {
 	     color: {{ shopsettings.link_color }};   
 	   }
 	   {% endif %}
