--- a/fuzzy/shop/templates/basket.html
+++ b/fuzzy/shop/templates/basket.html
@@ -138,65 +138,94 @@ $(document).ready( function() {
 	{% for thing in basket_items %}
 	  <div class="basket-row {% if thing.item.stocks.preorder %} preorder{% endif %} pure-u-1">
 	  
-		<div class="pure-u-1-8">
+		<div class="pure-u-1-12">
 			{% thumbnail thing.price.product.get_main_photo.image product_photo_small crop="center" as im %}
 			<img src="{{ im.url }}"/>
 			{% endthumbnail %}
 			<br/>
 		</div>
 		<div class="pure-u-1-2">
-		  <a title="{{ thing.price.product.short_description }}" href="{{ thing.price.product.get_absolute_url }}">{{ thing.price.product.name }}
-		  </a><br/>
+		   
+		   <a title="{{ thing.price.product.short_description }}" href="{{ thing.price.product.get_absolute_url }}">{{ thing.price.product.name }}
+		   </a><br/>
+		   
 		   {{ currency.symbol }}{{ thing.price.price|floatformat:"2" }} 
-		      each
+		      each 
+		      
+		   
+		   {% if not shopsettings.flat_fee_postage_price %}
+		   <span class="small">
+		   {% if thing.price.special_postage_price %}
+		          + {{ currency.symbol }}{{ thing.price.special_postage_price|floatformat:"2" }} postage
+		   {% else %}
+		          + {{ currency.symbol }}{{ shopsettings.standard_postage_price|floatformat:"2" }}
+		   {% endif %}
+		   </span>
+		   {% endif %}
+		   
+		   
 		   {% if thing.price.out_of_stock %}
 		      <br/>
-		      <span class="red">This item is out of stock! Please contact us before ordering.</span>
+		      <span class="red small">This item is out of stock! Please contact us before ordering.</span>
 		   {% endif %}
 	    </div>
         
-        <div class="pure-u-1-8">
+        <div class="pure-u-1-12">
 		  x {{ thing.quantity }}
         </div>
-		<div class="pure-u-1-12">
+		<div class="pure-u-1-6">
           <div class="updown">
 		      <a class="plus" href="{% url 'increase_quantity' thing.id %}"><span>+</span></a>
 		      {% ifequal thing.quantity 1 %}{% else %} <a class="minus" href="{% url 'reduce_quantity' thing.id %}"><span>-</span></a>{% endifequal %}
 		  </div>
-		  <a class="remove" title="Remove from basket" alt="Remove from basket" href="{% url 'remove_from_basket' thing.id %}">Remove</a>
+		  <a class="remove small" title="Remove from basket" alt="Remove from basket" href="{% url 'remove_from_basket' thing.id %}">Remove</a>
 		</div>
 	    <div class="pure-u-1-8">
-		  {{ currency.symbol }}{{ thing.get_price|floatformat:"2" }}
+		  {{ currency.symbol }}{{ thing.total_price|floatformat:"2" }}
 		</div>
 		
 	  </div>
 	{% endfor %}
 	
-    {% if shopsettings.postage_price %}
-	<div class="basket-row postage pure-u-1">
-		<div class="pure-u-1-8">&nbsp;</div>
+    
+    {% if shopsettings.flat_fee_postage_price %}
+    <div class="basket-row postage pure-u-1">
+		<div class="pure-u-1-12">&nbsp;</div>
+        
+        {% if postage_discount %}
+            <div class="pure-u-1-2">
+        	  	<span class="strikethrough name">Postage</span>
+            </div>  
+            <div class="pure-u-1-8 strikethrough">{{ currency.symbol }}{{ shopsettings.flat_fee_postage_price|floatformat:"2" }}</div>
+        
+        
+        {% else %}
+        
+            <div class="pure-u-1-2">
+    			<span class="name">Postage</span>
+    			<span class="small">Delivered in 1-3 days | Shipped from the UK</span>
+    		</div>
+    		
+    		<div class="pure-u-1-12"></div>
+    		<div class="pure-u-1-6"></div>
+    		<div class="pure-u-1-8 right">{{ currency.symbol }}{{ shopsettings.flat_fee_postage_price|floatformat:"2" }}</div>
+    		
+        {% endif %}        
+    
+    </div>   	        	
+    {% endif %}
+
+
+	 
+	 
+	 <div class="basket-row postage pure-u-1">
 		
-		{% if postage_discount %}
-	  	<div class="pure-u-1-2">
-	  		<span class="strikethrough name">Postage</span>
-        </div>  
-        <div class="pure-u-1-8 strikethrough">{{ currency.symbol }}{{ shopsettings.postage_price|floatformat:"2" }}</div>
-		{% else %}
-		<div class="pure-u-1-2">
-			<span class="name">Postage</span>
-			<span class="small">Delivered in 1-3 days | Shipped from the UK</span>
-		</div>
-		
-		<div class="pure-u-1-8"></div>
-		<div class="pure-u-1-12"></div>
-		<div class="pure-u-1-8 right">{{ currency.symbol }}{{ shopsettings.postage_price|floatformat:"2" }}</div>
-		
-		
-		<div class="pure-u-1-8">&nbsp;</div>
+		<div class="pure-u-1-12">&nbsp;</div>
 		<div class="pure-u-1-2" id="delivery_date">
+    
 		  
 		  {% if delivery_date %}
-		      <span class="">Will be delivered on {{ delivery_date|date:"M. d Y" }} - <span class="toggle">change the date</span>
+		      <span class="small">You've requested delivery on {{ delivery_date|date:"M. d Y" }} - we'll confirm this once you order or let you know if there's a problem. (<span class="toggle">change the date</span>)
 		      </span>
 		  {% else %}
 		  
@@ -214,14 +243,12 @@ $(document).ready( function() {
 		</div>
 		<div class="pure-u-1-8">&nbsp;</div>
 		
-		{% endif %}
 	</div>
-	{% endif %}
 	
 
 	<div class="basket-row pure-u-1" id="discount">
 		{% if not discount %}
-		<div class="pure-u-1-8">&nbsp;</div>
+		<div class="pure-u-1-12">&nbsp;</div>
 		<div class="pure-u-2-3">
 		  <a href="" class="toggle">Got a discount code?</a>
 		  <form action="." method="post">
@@ -235,12 +262,12 @@ $(document).ready( function() {
 		
 		
 		{% else %}
-		<div class="pure-u-1-8">&nbsp;</div>
+		<div class="pure-u-1-12">&nbsp;</div>
 		<div class="pure-u-1-2">
 		  You have entered a discount code worth {{ percent|floatformat }}% off! <a class="small" href="?clear_discount=true">Clear</a>
 		</div>
-		<div class="pure-u-1-8">&nbsp;</div>
 		<div class="pure-u-1-12">&nbsp;</div>
+		<div class="pure-u-1-6">&nbsp;</div>
 		<div class="pure-u-1-8">
 		  <span class="red">-{{ currency.symbol }}{{ discount_amount|floatformat:"-2" }}</span>
 		</div>
@@ -251,7 +278,7 @@ $(document).ready( function() {
 	</div>
 	
 	<div class="basket-row totals pure-u-1">
-		<div class="pure-u-1-8">&nbsp;</div>
+		<div class="pure-u-1-12">&nbsp;</div>
 		<div class="pure-u-1-2">
 			<span class="name">Total</span>
 		</div>
