--- a/fuzzy/shop/templates/page.html
+++ b/fuzzy/shop/templates/page.html
@@ -1,5 +1,5 @@
 {% extends base_template %}
-{% load thumbnail nav_selected convert_links i18n %}
+{% load thumbnail nav_selected convert_links i18n staticfiles %}
 
 {% block aboutselected %}selected{% endblock %}
 
@@ -40,10 +40,35 @@ $(function() {
 {% endblock %}
 
 {% block content %}
+<div class="pure-g-r">
+<div class="pure-u-2-3">
+    <h1>{{ page.name }}</h1>
+    {{ page.content|convert_links|safe }}
+</div>
 
-<h1>{{ page.name }}</h1>
+<div class="pure-u-1-3" id="right">
+    <div class="pure-g-r">
+        <div class="box pure-u-11-12 white">
+            <div class="inner">
+                something here
+            </div>
+        </div>
+        
+        {% for x in promo_products %}        
+        <div class="box pure-u-11-12">
+            <a href="{{ x.get_absolute_url }}"><span class="link"></span></a>
+            {% thumbnail x.get_main_photo.image product_photo_medium crop="center" as im %}
+            <img src="{{ im.url }}" />
+            {% endthumbnail %}
+            <div class="price">
+                {{ x.name }}
+            </div>
+        </div>
+        {% endfor %}
+        
+    </div>
+</div>
 
-{{ page.content|convert_links|safe }}
 
-
+</div>
 {% endblock %}
