--- a/fuzzy/shop/templates/product.html
+++ b/fuzzy/shop/templates/product.html
@@ -24,6 +24,7 @@
 {% endblock %}
 
 {% block extrajs %}
+<script type="text/javascript" src="{% static 'js/jquery.tools.min.js' %}"></script>
 <script type="text/javascript">
 
 $(function() {
@@ -101,6 +102,11 @@ function addToBasket(obj) {
 
 $(document).ready( function() {
     addToBasket('.price a.button');
+    
+    $('.postage').tooltip({
+       offset: [-15, 0],     
+    });
+
 });
 
 
@@ -172,7 +178,24 @@ $(document).ready( function() {
   top: 4px;   
 }
 
-#prices li .button {
+
+#prices li .price .postage.button {
+  font-weight: normal;
+  float: none;
+  margin: 0 0 0 10px;
+  position: relative;
+  top: -2px;
+  background: #a1a1a1; 
+  font-size: 11px;  
+}
+
+#prices li .price .postage.button:hover {
+  color: #333;
+  background: #999;
+  cursor: pointer;
+}
+
+#prices li a.button {
   float: right;   
 }
 
@@ -256,6 +279,10 @@ $(document).ready( function() {
                 
                 <span class="price">
                     <span class="amount">{{ currency.symbol }}{{ x.price }}</span> / {{ x.description }}
+                    
+                    {% if x.special_postage_price %}
+                    <span class="postage button small" title="This item carries an extra postage cost of {{ currency.symbol }}{{ x.special_postage_price }} because it's heavier than most items">+ extra postage!</span>
+                    {% endif %}
                 </span>
                 
                 {% if not x.out_of_stock %}
@@ -268,17 +295,19 @@ $(document).ready( function() {
 
 <div class="hr"></div>
 
-<div id="body" class="pure-u-3-5">
+<div id="body" class="pure-u-2-3">
 {{ product.content|convert_links|safe }}
 </div>
 
 
 
 <div id="right" class="pure-u-1-3">
-    <div class="pure-u-1 white">
-        <div class="inner">
-            <h3>Safe payments</h3>
-            <p>Cras id lorem a tortor laoreet tristique non sit amet ipsum. Curabitur ac velit non nisi dignissim interdum. Donec non mauris ac erat euismod porta in sit amet nulla.</p>
+    <div class="pure-g-r">
+        <div class="box pure-u-11-12 white">
+            <div class="inner ">
+                <h3>Safe payments</h3>
+                <p>Cras id lorem a tortor laoreet tristique non sit amet ipsum. Curabitur ac velit non nisi dignissim interdum. Donec non mauris ac erat euismod porta in sit amet nulla.</p>
+            </div>
         </div>
     </div>
 </div>
