--- a/fuzzy/shop/templates/page.html
+++ b/fuzzy/shop/templates/page.html
@@ -41,7 +41,7 @@ $(function() {
 
 {% block content %}
 <div class="pure-g-r">
-<div class="pure-u-2-3">
+<div class="pure-u-2-3" id="left">
     <h1>{{ page.name }}</h1>
     {{ page.content|convert_links|safe }}
 </div>
