--- a/fuzzy/templates/base.html
+++ b/fuzzy/templates/base.html
@@ -124,7 +124,8 @@
         
         <div id="logo">
             <a title="" href="{% url 'home' %}">
-                {% thumbnail shopsettings.logo "200x200" crop="" as im %}
+                
+                {% thumbnail shopsettings.logo "x100" crop="" format="PNG" as im %}
                     <img id="logo" src="{{ im.url }}" />	   	
         	   	{% endthumbnail %}
             </a>
@@ -138,6 +139,7 @@
                 <a class="{% nav_selected request x.slug %}" href="{{ x.get_absolute_url }}">{{ x.name }}</a>
               </li>
             {% endfor %}
+            <li><a href="{% url 'blog_home' %}">Blog</a></li>
         </ul>
     	                	
     </div>
