--- a/fuzzy/templates/blog/entry.html
+++ b/fuzzy/templates/blog/entry.html
@@ -84,7 +84,7 @@ ul.rss li#google {
    border-top: 1px dashed #e1e1e1;
   border-bottom: 1px dashed #e1e1e1;
   padding: 5px 0;
-  margin: 20px 0 20px 0;   
+  margin: 0px 0 0px 0;   
 }
 
 p.meta a:hover {
@@ -237,35 +237,20 @@ p.quote {
 
 {% block content %}
 
-<div id="mtw">
-  <div class="sp">		
-		
-	<div id="right">
-		{% include "blog/snippets/blog-right.html" %}
-	</div>
 
-	<div id="left">
+<div class="pure-g-r">
+	<div id="left" class="pure-u-2-3">
+	
     	<h1>{{ entry.title }}</h1>
-    	<p class="meta">&laquo; <a href="{% url blog_home %}">back to blog home</a> | {{ entry.date_added|date:"d M Y" }} | <a href="{{ site_url }}{{ entry.get_absolute_url }}#disqus_thread">Comments</a> | {% if entry.blogger %}{% trans 'By' %} <a href="{% url page entry.blogger.slug %}">{{ entry.blogger.name }}</a>{% endif %}</p>	
+    	<p class="meta">&laquo; <a href="{% url 'blog_home' %}">back to blog home</a> | {{ entry.date_added|date:"d M Y" }} | <a href="{{ site_url }}{{ entry.get_absolute_url }}#disqus_thread">Comments</a> | {% if entry.blogger %}{% trans 'By' %} <a href="{% url 'page' entry.blogger.slug %}">{{ entry.blogger.name }}</a>{% endif %}</p>	
     
     	{{ entry.content|convert_links|safe }}
     			
-    			
-    	<div id="disqus_thread"></div>
-        <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'minrivertea'; // required: replace example with your forum shortname
+    </div>
 
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
+    {% include 'blog/snippets/right.html' %}
+
+</div>
 			
 	   {% if ga_is_on %}			
 		<ul class="rss {% if page.feature_image %}opaque{% endif %}">
@@ -287,8 +272,8 @@ p.quote {
 			</li>
 		</ul>
 		{% endif %}
-  </div>
-</div>
+
+
 
 {% endblock %}
 
