--- a/fuzzy/templates/blog/snippets/entry-list.html
+++ b/fuzzy/templates/blog/snippets/entry-list.html
@@ -2,7 +2,7 @@
 
   {% for thing in entries.object_list.all %}
   <div class="entry{% if forloop.last %} last{% endif %}">
-    <a href="{% url blog_entry thing.slug %}"><span class="link"></span></a>
+    <a href="{% url 'blog_entry' thing.slug %}"><span class="link"></span></a>
   	{% if thing.promo_image %}
 	<div class="image">
 		{% thumbnail thing.promo_image "150x90" crop="center" as im %}
@@ -13,7 +13,7 @@
 
   	<div class="text{% if not thing.promo_image %} long{% endif %}">
   		<h3>
-  		<a alt="{{ thing.title }}" title="{{ thing.title }}" href="{% url blog_entry thing.slug %}">{{ thing.title }}</a>
+  		<a alt="{{ thing.title }}" title="{{ thing.title }}" href="{% url 'blog_entry' thing.slug %}">{{ thing.title }}</a>
   	    </h3>
   		<p>{{ thing.summary }}</p>
   		<p><span class="entry-meta">{% if thing.blogger %}By {{ thing.blogger }} | {% endif %}{{ thing.date_added|date:"d M Y" }}
