--- a/fuzzy/shop/static/css/styles.css
+++ b/fuzzy/shop/static/css/styles.css
@@ -22,6 +22,20 @@ body {
   width: 100%;  
 }
 
+.message {
+    background: none repeat scroll 0 0 #FFFFFF;
+    float: left;
+    font-weight: bold;
+    margin: 0 0 10px;
+    padding: 10px;
+    width: 100%;
+}
+
+.message p {
+  margin: 0;
+  padding: 0;   
+}
+
 /* END GLOBAL STYLES */
 
 /* BUTTONS AND LINKS */
