--- a/fuzzy/shop/templates/snippets/footer.html
+++ b/fuzzy/shop/templates/snippets/footer.html
@@ -17,11 +17,10 @@
         {% endfor %}
     </ul>
     
-    
     <ul id="social" class="pure-u-1-3 right">
         <li class="first">Find us on:</li>
-        <li><a id="pinterest" href=""></a></li>
-        <li><a id="facebook" href=""></a></li>
+        <li><a id="pinterest" href="http://www.pinterest.com/gofuzzymoose/"></a></li>
+        <li><a id="facebook" href="http://www.facebook.com/fuzzymoosekitchen"></a></li>
     </ul>
     
   </div>	
